--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,15 +6,15 @@ $rounded-md: 6px;
 
 /* main.css */
 @font-face {
-  font-family: "Inter";
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("../fonts/Inter-Regular.ttf") format("truetype");
+  src: url("../fonts/Poppins-Regular.ttf") format("truetype");
 }
 
 * {
-  font-family: Inter !important;
+  font-family: Poppins !important;
 }
 
 /* background*/
@@ -195,11 +195,11 @@ body {
   border-radius: 50%;
 }
 
-.lbl input:active~.checkbox {
+.lbl input:active ~ .checkbox {
   background-color: white;
 }
 
-.lbl input:checked~.checkbox {
+.lbl input:checked ~ .checkbox {
   background-color: #7b1fa2;
   border: none;
 }
@@ -210,7 +210,7 @@ body {
   display: none;
 }
 
-.lbl input:checked~.checkbox:after {
+.lbl input:checked ~ .checkbox:after {
   display: block;
 }
 
@@ -299,10 +299,10 @@ tbody {
   border: 1px solid $border-color;
 }
 
-.fixed-cell thead tr>th,
-.fixed-cell-first thead tr>th,
-.fixed-cell-no-select thead tr>th,
-.fixed-last-cell thead tr>th {
+.fixed-cell thead tr > th,
+.fixed-cell-first thead tr > th,
+.fixed-cell-no-select thead tr > th,
+.fixed-last-cell thead tr > th {
   background: #fff !important;
   position: sticky;
   padding: 0.5rem;
@@ -311,12 +311,12 @@ tbody {
   box-shadow: none !important;
 }
 
-.fixed-cell table>thead {
+.fixed-cell table > thead {
   z-index: 999 !important;
   border-bottom: 1px solid $border-color;
 }
 
-.fixed-last-cell table>thead {
+.fixed-last-cell table > thead {
   z-index: 999 !important;
   border-bottom: 1px solid $border-color;
 }
@@ -332,13 +332,13 @@ tbody {
   border-bottom: 1px solid $border-color;
 }
 
-.fixed-cell table thead tr> :nth-child(-n + 1),
-.fixed-cell table thead tr> :nth-last-child(-n + 1),
-.fixed-cell-first table thead tr> :nth-child(-n + 1),
-.fixed-cell-first table thead tr> :nth-last-child(-n + 1),
-.fixed-cell-no-select table thead tr> :nth-child(-n + 1),
-.fixed-cell-no-select table thead tr> :nth-last-child(-n + 1),
-.fixed-last-cell table thead tr> :nth-last-child(1) {
+.fixed-cell table thead tr > :nth-child(-n + 1),
+.fixed-cell table thead tr > :nth-last-child(-n + 1),
+.fixed-cell-first table thead tr > :nth-child(-n + 1),
+.fixed-cell-first table thead tr > :nth-last-child(-n + 1),
+.fixed-cell-no-select table thead tr > :nth-child(-n + 1),
+.fixed-cell-no-select table thead tr > :nth-last-child(-n + 1),
+.fixed-last-cell table thead tr > :nth-last-child(1) {
   position: sticky;
   left: 0;
   z-index: 999 !important;
@@ -346,12 +346,12 @@ tbody {
   width: 100px;
 }
 
-.fixed-cell table thead tr> :nth-last-child(-n + 1),
-.fixed-cell tbody tr> :nth-last-child(-n + 1),
-.fixed-cell-no-select table thead tr> :nth-last-child(-n + 1),
-.fixed-cell-no-select tbody tr> :nth-last-child(-n + 1),
-.fixed-last-cell table thead tr> :nth-last-child(-n + 2),
-.fixed-last-cell tbody tr> :nth-last-child(1) {
+.fixed-cell table thead tr > :nth-last-child(-n + 1),
+.fixed-cell tbody tr > :nth-last-child(-n + 1),
+.fixed-cell-no-select table thead tr > :nth-last-child(-n + 1),
+.fixed-cell-no-select tbody tr > :nth-last-child(-n + 1),
+.fixed-last-cell table thead tr > :nth-last-child(-n + 2),
+.fixed-last-cell tbody tr > :nth-last-child(1) {
   right: 0;
   left: 2px;
 }
@@ -362,12 +362,12 @@ tbody {
   text-align: center;
 }
 
-.fixed-cell tbody tr> :nth-child(-n + 1),
-.fixed-cell tbody tr> :nth-last-child(-n + 1),
-.fixed-cell-first tbody tr> :nth-child(-n + 1),
-.fixed-cell-no-select tbody tr> :nth-child(-n + 1),
-.fixed-cell-no-select tbody tr> :nth-last-child(-n + 1),
-.fixed-last-cell tbody tr> :nth-last-child(1) {
+.fixed-cell tbody tr > :nth-child(-n + 1),
+.fixed-cell tbody tr > :nth-last-child(-n + 1),
+.fixed-cell-first tbody tr > :nth-child(-n + 1),
+.fixed-cell-no-select tbody tr > :nth-child(-n + 1),
+.fixed-cell-no-select tbody tr > :nth-last-child(-n + 1),
+.fixed-last-cell tbody tr > :nth-last-child(1) {
   background: #fff !important;
   position: sticky !important;
   left: 0;
@@ -375,7 +375,7 @@ tbody {
   max-width: 420px;
 }
 
-.fixed-last-cell table thead tr> :nth-last-child(2) {
+.fixed-last-cell table thead tr > :nth-last-child(2) {
   position: sticky;
   left: 0;
   z-index: 9999 !important;
@@ -384,7 +384,7 @@ tbody {
   right: 334px;
 }
 
-.fixed-last-cell tbody tr> :nth-last-child(2),
+.fixed-last-cell tbody tr > :nth-last-child(2),
 .fixed-last-cell tbody th:nth-last-child(2) {
   position: sticky !important;
   width: 120px;
@@ -392,7 +392,13 @@ tbody {
   right: 334px;
 }
 
-.fixed-cell .v-data-table--fixed-header>.v-data-table__wrapper>table>thead>tr>th {
+.fixed-cell
+  .v-data-table--fixed-header
+  > .v-data-table__wrapper
+  > table
+  > thead
+  > tr
+  > th {
   box-shadow: inset 0 -1px 0 rgb(0 0 0 / 12%) !important;
 }
 
@@ -515,7 +521,7 @@ tbody {
   font-size: 0.9em !important;
 }
 
-.v-text-field--outlined>.v-input__control>.v-input__slot {
+.v-text-field--outlined > .v-input__control > .v-input__slot {
   min-height: 40.39px !important;
 }
 
@@ -659,7 +665,7 @@ tbody {
   border: 1px solid #e5e7eb;
 }
 
-.tel .v-select>.v-input__control>.v-input__slot {
+.tel .v-select > .v-input__control > .v-input__slot {
   margin-top: 8px;
 }
 
@@ -898,15 +904,14 @@ tbody {
     padding: 0 !important;
 
     &__content {
-      background-color: #440F83 !important;
+      background-color: #440f83 !important;
       transition: background-color 0.5s ease;
     }
-
   }
 
   .home-bg {
     .banner_container {
-      background-color: #440F83;
+      background-color: #440f83;
     }
   }
 }
@@ -921,7 +926,6 @@ tbody {
     }
   }
 }
-
 
 .custom-text-field .v-input__control .v-field__field,
 .custom-text-field .v-input__control .v-field__field input {
@@ -947,6 +951,6 @@ tbody {
 }
 
 .link {
-  color: #8431E7 !important;
+  color: #8431e7 !important;
   text-decoration: none;
 }
